Добавлена тёмная тема на все страницы

--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="stylesheet" href="../styles/theme.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Товары</title>
   <link rel="stylesheet" href="../styles/styles.css" />
 </head>
+
 <body>
   <header class="header">
     <h1>Товары</h1>
@@ -47,5 +49,7 @@
   <footer class="footer">
     <p>© 2025 Евтушенко Гордей</p>
   </footer>
+  <button id="theme-toggle">🌙 / ☀️</button>
+<script src="../scripts/theme.js"></script>
 </body>
 </html>
