--- a/pages/news.html
+++ b/pages/news.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="stylesheet" href="../styles/theme.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Новости</title>
@@ -36,5 +37,7 @@
   <footer class="footer">
     <p>© 2025 Евтушенко Гордей</p>
   </footer>
+  <button id="theme-toggle">🌙 / ☀️</button>
+<script src="../scripts/theme.js"></script>
 </body>
 </html>
