Добавлена тёмная тема на все страницы

--- a/pages/practices.html
+++ b/pages/practices.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="stylesheet" href="../styles/theme.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Практики</title>
+  <!-- Порядок важен: сначала общие стили, потом тема -->
   <link rel="stylesheet" href="../styles/styles.css" />
+  <link rel="stylesheet" href="../styles/theme.css" />
 </head>
 <body>
+  <button id="theme-toggle">🌙 / ☀️</button>
+
   <header class="header">
     <h1>Практики</h1>
     <nav>
@@ -28,7 +31,7 @@
   <footer class="footer">
     <p>© 2025 Евтушенко Гордей</p>
   </footer>
-  <button id="theme-toggle">🌙 / ☀️</button>
-<script src="../scripts/theme.js"></script>
+
+  <script src="../scripts/theme.js"></script>
 </body>
 </html>
