Добавлен рабочий index.html с тёмной темой

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,82 +11,27 @@
       --card-bg: #f9f9f9;
       --border-color: #ddd;
     }
-
     [data-theme="dark"] {
       --bg-color: #121212;
       --text-color: #ffffff;
       --card-bg: #1e1e1e;
       --border-color: #444;
     }
-
     body {
       background-color: var(--bg-color);
       color: var(--text-color);
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      transition: background-color 0.3s, color 0.3s;
+      transition: background-color 0.3s;
     }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-
-    h1, h2, h3 {
-      color: var(--text-color);
-    }
-
-    p, ul {
-      color: var(--text-color);
-    }
-
-    /* Применяем тему к существующим блокам */
-    .header,
-    .card,
-    .footer {
-      background-color: var(--card-bg);
-      border: 1px solid var(--border-color);
-      border-radius: 10px;
+    .card {
+      background: var(--card-bg);
       padding: 20px;
-      margin-bottom: 20px;
+      border-radius: 10px;
+      max-width: 800px;
+      margin: 0 auto;
     }
-
-    .nav-list {
-      display: flex;
-      gap: 16px;
-      list-style: none;
-      padding: 0;
-      margin: 16px 0 0;
-    }
-
-    .nav-list a {
-      color: var(--text-color);
-      text-decoration: none;
-    }
-
-    .nav-list a:hover {
-      text-decoration: underline;
-    }
-
-    .about-flex {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    @media (min-width: 600px) {
-      .about-flex {
-        flex-direction: row;
-        align-items: flex-start;
-      }
-      .about-flex > div {
-        flex: 1;
-      }
-    }
-
     button#theme-toggle {
       position: fixed;
       top: 20px;
@@ -97,76 +42,41 @@
       border: 1px solid var(--border-color);
       border-radius: 20px;
       cursor: pointer;
-      font-size: 16px;
       z-index: 100;
     }
   </style>
 </head>
 <body>
   <button id="theme-toggle">🌙 / ☀️</button>
-
-  <header class="header">
-    <h1>Мой сайт</h1>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="pages/news.html">Новости</a></li>
-        <li><a href="pages/practices.html">Практики</a></li>
-        <li><a href="pages/goods.html">Товары</a></li>
-        <li><a href="pages/contacts.html">Контакты</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="card about">
-      <div class="about-flex">
-        <img src="images/photo.jpg" alt="Моё фото" class="my-photo" />
-        <div>
-          <h2>Обо мне</h2>
-          <p>Меня зовут Евтушенко Гордей, я начинающий фронтенд-разработчик.</p>
-          <h3>Навыки:</h3>
-          <ul>
-            <li>HTML/CSS</li>
-            <li>JavaScript</li>
-            <li>Git и GitHub</li>
-          </ul>
-          <h3>Опыт работы:</h3>
-          <ul>
-            <li>Стажёр фронтенда, компания ABC, 6 месяцев</li>
-            <li>Проекты на React и Vue</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <p>© 2025 Евтушенко Гордей</p>
-  </footer>
+  <div class="card">
+    <img src="images/photo.jpg" alt="Моё фото" style="max-width:100%; border-radius:8px;">
+    <h2>Обо мне</h2>
+    <p>Меня зовут Евтушенко Гордей, я начинающий фронтенд-разработчик.</p>
+    <h3>Навыки:</h3>
+    <ul>
+      <li>HTML/CSS</li>
+      <li>JavaScript</li>
+      <li>Git и GitHub</li>
+    </ul>
+    <h3>Опыт работы:</h3>
+    <ul>
+      <li>Стажёр фронтенда, компания ABC, 6 месяцев</li>
+      <li>Проекты на React и Vue</li>
+    </ul>
+  </div>
 
   <script>
-    const toggleButton = document.getElementById('theme-toggle');
-    const currentTheme = localStorage.getItem('theme') || 'light';
+    const btn = document.getElementById('theme-toggle');
+    const saved = localStorage.getItem('theme') || 'light';
+    document.documentElement.setAttribute('data-theme', saved);
+    btn.textContent = saved === 'dark' ? '☀️ / 🌙' : '🌙 / ☀️';
 
-    document.documentElement.setAttribute('data-theme', currentTheme);
-
-    function updateButtonIcon() {
-      if (document.documentElement.getAttribute('data-theme') === 'dark') {
-        toggleButton.textContent = '☀️ / 🌙';
-      } else {
-        toggleButton.textContent = '🌙 / ☀️';
-      }
-    }
-
-    toggleButton.addEventListener('click', () => {
+    btn.onclick = () => {
       const newTheme = document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
       document.documentElement.setAttribute('data-theme', newTheme);
       localStorage.setItem('theme', newTheme);
-      updateButtonIcon();
-    });
-
-    updateButtonIcon();
+      btn.textContent = newTheme === 'dark' ? '☀️ / 🌙' : '🌙 / ☀️';
+    };
   </script>
 </body>
 </html>
