Обновлён сайт с тёмной темой

--- a/pages/practices.html
+++ b/pages/practices.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Практики</title>
-  <!-- Порядок важен: сначала общие стили, потом тема -->
   <link rel="stylesheet" href="../styles/styles.css" />
-  <link rel="stylesheet" href="../styles/theme.css" />
 </head>
 <body>
   <button id="theme-toggle">🌙 / ☀️</button>
@@ -25,7 +23,9 @@
   </header>
 
   <main class="main-content">
-    <p>Описание практических занятий и проектов.</p>
+    <section class="card">
+      <p>Описание практических занятий и проектов.</p>
+    </section>
   </main>
 
   <footer class="footer">
