--- a/index.html
+++ b/index.html
@@ -1,82 +1,54 @@
 <!DOCTYPE html>
-<html lang="ru" data-theme="light">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Мой первый сайт</title>
-  <style>
-    :root {
-      --bg-color: #ffffff;
-      --text-color: #000000;
-      --card-bg: #f9f9f9;
-      --border-color: #ddd;
-    }
-    [data-theme="dark"] {
-      --bg-color: #121212;
-      --text-color: #ffffff;
-      --card-bg: #1e1e1e;
-      --border-color: #444;
-    }
-    body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      transition: background-color 0.3s;
-    }
-    .card {
-      background: var(--card-bg);
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    button#theme-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      padding: 8px 16px;
-      background: var(--card-bg);
-      color: var(--text-color);
-      border: 1px solid var(--border-color);
-      border-radius: 20px;
-      cursor: pointer;
-      z-index: 100;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <button id="theme-toggle">🌙 / ☀️</button>
-  <div class="card">
-    <img src="images/photo.jpg" alt="Моё фото" style="max-width:100%; border-radius:8px;">
-    <h2>Обо мне</h2>
-    <p>Меня зовут Евтушенко Гордей, я начинающий фронтенд-разработчик.</p>
-    <h3>Навыки:</h3>
-    <ul>
-      <li>HTML/CSS</li>
-      <li>JavaScript</li>
-      <li>Git и GitHub</li>
-    </ul>
-    <h3>Опыт работы:</h3>
-    <ul>
-      <li>Стажёр фронтенда, компания ABC, 6 месяцев</li>
-      <li>Проекты на React и Vue</li>
-    </ul>
-  </div>
 
-  <script>
-    const btn = document.getElementById('theme-toggle');
-    const saved = localStorage.getItem('theme') || 'light';
-    document.documentElement.setAttribute('data-theme', saved);
-    btn.textContent = saved === 'dark' ? '☀️ / 🌙' : '🌙 / ☀️';
+  <header class="header">
+    <h1>Мой сайт</h1>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="pages/news.html">Новости</a></li>
+        <li><a href="pages/practices.html">Практики</a></li>
+        <li><a href="pages/goods.html">Товары</a></li>
+        <li><a href="pages/contacts.html">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    btn.onclick = () => {
-      const newTheme = document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
-      document.documentElement.setAttribute('data-theme', newTheme);
-      localStorage.setItem('theme', newTheme);
-      btn.textContent = newTheme === 'dark' ? '☀️ / 🌙' : '🌙 / ☀️';
-    };
-  </script>
+  <main>
+    <section class="card about">
+      <div class="about-flex">
+        <img src="images/photo.jpg" alt="Моё фото" class="my-photo" />
+        <div>
+          <h2>Обо мне</h2>
+          <p>Меня зовут Евтушенко Гордей, я начинающий фронтенд-разработчик.</p>
+          <h3>Навыки:</h3>
+          <ul>
+            <li>HTML/CSS</li>
+            <li>JavaScript</li>
+            <li>Git и GitHub</li>
+          </ul>
+          <h3>Опыт работы:</h3>
+          <ul>
+            <li>Стажёр фронтенда, компания ABC, 6 месяцев</li>
+            <li>Проекты на React и Vue</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>© 2025 Евтушенко Гордей</p>
+  </footer>
+
+  <script src="scripts/theme.js"></script>
 </body>
 </html>
