Добавлены стили и скрипты

--- a/pages/practices.html
+++ b/pages/practices.html
@@ -24,7 +24,7 @@
 
   <main class="main-content">
     <section class="card">
-      <p>Описание практических занятий и проектов.</p>
+      <p>sosalov true form stal bomzom</p>
     </section>
   </main>
 
