--- a/index.html
+++ b/index.html
@@ -1,54 +1,208 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Мой первый сайт</title>
-  <link rel="stylesheet" href="styles/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Портфолио - Евтушенко Гордея</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/styles.css">
 </head>
-<body>
-  <button id="theme-toggle">🌙 / ☀️</button>
-
-  <header class="header">
-    <h1>Мой сайт</h1>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="pages/news.html">Новости</a></li>
-        <li><a href="pages/practices.html">Практики</a></li>
-        <li><a href="pages/goods.html">Товары</a></li>
-        <li><a href="pages/contacts.html">Контакты</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="card about">
-      <div class="about-flex">
-        <img src="images/photo.jpg" alt="Моё фото" class="my-photo" />
-        <div>
-          <h2>Обо мне</h2>
-          <p>Меня зовут Евтушенко Гордей, я начинающий фронтенд-разработчик.</p>
-          <h3>Навыки:</h3>
-          <ul>
-            <li>HTML/CSS</li>
-            <li>JavaScript</li>
-            <li>Git и GitHub</li>
-          </ul>
-          <h3>Опыт работы:</h3>
-          <ul>
-            <li>Стажёр фронтенда, компания ABC, 6 месяцев</li>
-            <li>Проекты на React и Vue</li>
-          </ul>
+<body class="bg-dark">
+    <header class="bg-dark border-bottom border-warning">
+        <div class="container py-3">
+            <h1 class="h3 text-center mb-0 text-white">Портфолио Евтушенко Гордея</h1>
         </div>
-      </div>
-    </section>
-  </main>
+    </header>
 
-  <footer class="footer">
-    <p>© 2025 Евтушенко Гордей</p>
-  </footer>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand fw-bold text-white" href="index.html">Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active text-white" href="index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="pages/news.html">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="pages/practices.html">Практики</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="pages/goods.html">Товары</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="pages/contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <script src="scripts/theme.js"></script>
+    <main class="container my-5">
+        <section class="text-center mb-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <h1 class="display-4 mb-4 text-white">Информация об авторе</h1>
+                    <img src="images/photo.jpg" alt="Фото автора" class="img-fluid rounded-circle mb-4 border border-3 border-warning" style="width: 200px; height: 200px; object-fit: cover;">
+                    <h2 class="h3 mb-2 text-white">Евтушенко Гордей Евгеньевич </h2>
+                    <p class="lead text-warning">ЭФБО-12-24</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="mb-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div class="card bg-dark border-warning">
+                        <div class="card-body">
+                            <h3 class="card-title h4 mb-3 text-white">Обо мне</h3>
+                            <p class="card-text mb-0" style="color: #e2e8f0; font-size: 1.1rem; line-height: 1.6;">
+                                Я родился в Москве в 2005-м. С детства интересовался технологиями и программированием. 
+                                Начинал с простых скриптов, сейчас активно развиваюсь в веб-разработке. Люблю создавать интересные проекты 
+                                и решать сложные задачи.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="mb-5">
+            <h2 class="h3 text-center mb-4 text-white">Технические навыки</h2>
+            <div class="row g-3">
+                <div class="col-md-3 col-6">
+                    <div class="bg-primary text-white text-center p-3 rounded">
+                        <strong>HTML/CSS</strong>
+                        <div class="small mt-1">Продвинутый уровень</div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="bg-success text-white text-center p-3 rounded">
+                        <strong>JavaScript</strong>
+                        <div class="small mt-1">Средний уровень</div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="bg-warning text-dark text-center p-3 rounded">
+                        <strong>Bootstrap 5</strong>
+                        <div class="small mt-1">Продвинутый уровень</div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="bg-info text-white text-center p-3 rounded">
+                        <strong>React</strong>
+                        <div class="small mt-1">Начальный уровень</div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row g-3 mt-2">
+                <div class="col-md-3 col-6">
+                    <div class="bg-dark text-white text-center p-3 rounded border border-secondary">
+                        <strong>Git/GitHub</strong>
+                        <div class="small mt-1">Средний уровень</div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="bg-secondary text-white text-center p-3 rounded">
+                        <strong>Python</strong>
+                        <div class="small mt-1">Начальный уровень</div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="bg-danger text-white text-center p-3 rounded">
+                        <strong>PHP</strong>
+                        <div class="small mt-1">Базовый уровень</div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="bg-dark text-white text-center p-3 rounded border border-success">
+                        <strong>MySQL</strong>
+                        <div class="small mt-1">Базовый уровень</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="mb-5">
+            <h2 class="h3 text-center mb-4 text-white">Мой опыт работы</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card h-100 bg-dark border-warning">
+                        <div class="card-body">
+                            <h3 class="card-title h5 text-white">Фриланс-разработчик</h3>
+                            <p class="card-text" style="color: #e2e8f0; font-size: 1rem;">
+                                Разработка лендингов и небольших сайтов на HTML, CSS и JavaScript. 
+                                Работа с клиентами и реализация проектов под ключ.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 bg-dark border-warning">
+                        <div class="card-body">
+                            <h3 class="card-title h5 text-white">Веб-разработчик</h3>
+                            <p class="card-text" style="color: #e2e8f0; font-size: 1rem;">
+                                Создание адаптивных веб-сайтов с использованием Bootstrap. 
+                                Оптимизация и поддержка существующих проектов.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 bg-dark border-warning">
+                        <div class="card-body">
+                            <h3 class="card-title h5 text-white">Технический специалист</h3>
+                            <p class="card-text" style="color: #e2e8f0; font-size: 1rem;">
+                                Техническая поддержка IT-инфраструктуры. Решение проблем с ПО и настройка систем.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="mb-5">
+            <h2 class="h3 text-center mb-4 text-white">Мои проекты</h2>
+            <div class="row g-4">
+                <div class="col-md-6">
+                    <div class="card bg-dark border-info h-100">
+                        <div class="card-body">
+                            <h3 class="card-title h5 text-white">Интернет-магазин</h3>
+                            <p class="card-text" style="color: #e2e8f0; font-size: 1rem;">
+                                Полнофункциональный интернет-магазин с корзиной товаров и системой заказов.
+                                Технологии: HTML, CSS, JavaScript, Bootstrap.
+                            </p>
+                            <div class="mt-3">
+                                <span class="badge bg-primary me-1">HTML</span>
+                                <span class="badge bg-success me-1">CSS</span>
+                                <span class="badge bg-warning text-dark me-1">JavaScript</span>
+                                <span class="badge bg-info">Bootstrap</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card bg-dark border-info h-100">
+                        <div class="card-body">
+                            <h3 class="card-title h5 text-white">Портфолио сайт</h3>
+                            <p class="card-text" style="color: #e2e8f0; font-size: 1rem;">
+                                Адаптивный сайт-портфолио с современным дизайном. 
+                                Включает галерею проектов и контактную форму.
+                            </p>
+                            <div class="mt-3">
+                                <span class="badge bg-primary me-1">HTML</span>
+                                <span class="badge bg-success me-1">CSS</span>
+                                <span class="badge bg-warning text-dark me-1">JavaScript</span>
+                                <span class="badge bg-info">Bootstrap 5</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-dark text-warning text-center py-3 border-top border-warning">
+        <div class="container">
+            <p class="mb-0">2025 ООО "ZXC Comunity"</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
